* NEW terminal canvas for HTML 5 canvas element
* NEW terminals for pdf and png based on cairo and pango
* NEW terminal dpu414 - Seiko DPU-414 thermal printer
* NEW error status variables GPVAL_ERRNO and GPVAL_ERRMSG
* NEW variables GPVAL_LAST_PLOT, GPVAL_{S}PLOT, GPVAL_MULTIPLOT
* NEW variables GPVAL_VIEW_{MAP|ROT_X|ROT_Z|SCALE|ZSCALE}, GPVAL_TERMINALS
* NEW support for dashed linetypes in additional terminals
* NEW the 'bind' command accepts non-keyboard triggers, e.g. 'close'
* NEW individual plots can be omitted from autoscaling of axis ranges
* NEW more smoothing options: new kernels (for dgrid3d) and 'smooth cumulative'
* NEW commands 'show bind' and 'reset bind'
* NEW command 'evaluate' executes commands from a string variable
* NEW z-axis tic labels can be colored by Z value
* NEW command 'set view equal {xy|xyz}' forces axes in a 3D plot to the same scale
* FIX remove the limit of 64 characters read as string data from a data file
* FIX remainder of command line is not lost after a "load" command
* FIX more complete support for locale internationalization, UTF-8 encoding
* FIX various font-handling problems in postscript terminal driver
* FIX avoid infinite loop on resizing x11 plot window under ion, fluxbox
* FIX handle addition plot styles in mode 'set table'
* FIX purge tick labels read from a datafile at the end of each plot
* FIX 2nd colour in the colour box for negative palette in postscript
* FIX interpolatation for pm3d surfaces given by both z and colour coordinates
* FIX 'set datafile binary format=...' was documented, but not implemented
* CHANGE syntax of 'set datafile binary' array= and record= options
* CHANGE 'reset' does not affect locale, encoding, decimalsign settings
* CHANGE 'set key textcolor rgb variable' will use plot colors for key entries
* CHANGE Remove obsolete IRIS4D terminal type
* CHANGE Remove obsolete atari terminal types (atariaes atarivdi multitos)
* CHANGE Use empty/solid fill for candlesticks rather than empty/striped